Making progress on GACC scraping

--- a/building_notebook.ipynb
+++ b/building_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "9915e0d0-ace3-45f4-8ba3-f6eec9503b37",
    "metadata": {},
    "outputs": [],
@@ -17,37 +17,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "4a677b22-ee9a-4de3-8e46-d032e0ab0e2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "prelim_url = 'http://english.customs.gov.cn/statics/report/preliminary.html'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "41fb009d-39dc-4678-b34b-976350a1b4c5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prelim_r = requests.get(prelim_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "cc25f3e7-d10b-4989-a434-01e39ef3c9e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "prelim_url = 'http://english.customs.gov.cn/statics/report/preliminary.html'\n",
+    "prelim_r = requests.get(prelim_url)\n",
     "prelim_soup = BeautifulSoup(prelim_r.content, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
+   "id": "41fb009d-39dc-4678-b34b-976350a1b4c5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cc25f3e7-d10b-4989-a434-01e39ef3c9e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "185e8c1b-9e86-42dd-b7ba-db8e850bfb3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<td>(1) China's Total Export &amp; Import Values (in CNY)</td>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prelim_soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "75500ee6-b38b-4f08-a878-25332b0145db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Feb. http://english.customs.gov.cn/Statics/26047d08-f2cd-4483-9023-9e89b5ca1686.html\n",
+      " Mar. http://english.customs.gov.cn/Statics/991ba64c-f99e-4b47-8557-cc178cb2a14c.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "# command for finding list of exports & imports in USD\n",
+    "name_href_list = prelim_soup.find_all('td')[3].find_all('a')\n",
+    "for i in range(len(name_href_list)):\n",
+    "    print(name_href_list[i].text, name_href_list[i]['href'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5672df91-93b2-4c31-9376-e72709c9b4d6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month_url = 'http://english.customs.gov.cn/Statics/991ba64c-f99e-4b47-8557-cc178cb2a14c.html'\n",
+    "march_r = requests.get(month_url)\n",
+    "march_soup = BeautifulSoup(march_r.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "688fd989-2897-432b-a9b2-7a73779af8cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exports = march_soup.find_all('b')[15]\n",
+    "imports = march_soup.find_all('b')[20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "b126796f-cefb-4332-9fba-3d86fdf51f68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "month_url = 'http://english.customs.gov.cn/Statics/7043b548-0b1c-4251-83eb-f1aca196e612.html'\n",
+    "march_r = requests.get(month_url)\n",
+    "march_soup = BeautifulSoup(march_r.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "25912ce6-be84-4587-8391-24fe3726218f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<b>2,411.3 </b>\n",
+      "<b>2,273.4 </b>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(march_soup.find_all('b')[15])\n",
+    "print(march_soup.find_all('b')[20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "4ee152b1-8118-4e9c-9a04-7fc5e8be7884",
    "metadata": {},
    "outputs": [
