Figured out how to gather the selector years, and how they fit onto the base url

--- a/building_notebook.ipynb
+++ b/building_notebook.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "57d856db-0f67-4b34-b8c1-22753a5a0007",
+   "metadata": {},
+   "source": [
+    "## 1. Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "9915e0d0-ace3-45f4-8ba3-f6eec9503b37",
    "metadata": {},
    "outputs": [],
@@ -16,24 +24,162 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "4a677b22-ee9a-4de3-8e46-d032e0ab0e2e",
+   "cell_type": "markdown",
+   "id": "dc7a00dc-1108-4bb3-8177-535774a5efb9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "prelim_url = 'http://english.customs.gov.cn/statics/report/preliminary.html'\n",
-    "prelim_r = requests.get(prelim_url)\n",
-    "prelim_soup = BeautifulSoup(prelim_r.content, 'html.parser')"
+    "## 2. Making request to GACC Website & Parsing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "id": "d24244dc-69a9-4f59-a8b2-c228840b70c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup base url for full monthly bulletin webpage\n",
+    "fullb_url = 'http://english.customs.gov.cn/statics/report/monthly.html'\n",
+    "# make a get request\n",
+    "fullb_response = requests.get(fullb_url)\n",
+    "# use Beautiful Soup to parse and create soup\n",
+    "fullb_soup = BeautifulSoup(fullb_response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "9e6a74c7-3da8-4d0a-8c50-2a669851c8e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2022', '2021', '2020', '2019', '2018']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find the list of permissible years\n",
+    "\n",
+    "# find the list of years offered\n",
+    "select_years = fullb_soup.find('select', id='monthlysel')\n",
+    "# create and empty list\n",
+    "# append the values in our stripped strings to the list \n",
+    "list_years = []\n",
+    "for value in select_years.stripped_strings:\n",
+    "    list_years.append(value)\n",
+    "\n",
+    "# print out to show what is in there\n",
+    "print(list_years)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2074afb6-8825-45b3-8aa6-c2e7e55f752f",
+   "metadata": {},
+   "source": [
+    "The latest year is our base url. Previous years get appended to end of the url in the following format. \n",
+    "So will need to append everything in our list of years onto the base url in a loop.  \n",
+    "http://english.customs.gov.cn/statics/report/monthly2021.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "349b0382-aac1-4b71-9c97-58dbf26d6750",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# finding the links for each monthly totals summary\n",
+    "monthly_total_links = fullb_soup.find_all('td')[1].find_all('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "46dab043-c55e-45a3-906e-b5069e78c6b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Jan. http://english.customs.gov.cn/Statics/662b39f1-e265-4b94-97f4-724fbd7fb98f.html\n",
+      " Feb. http://english.customs.gov.cn/Statics/230a4318-d804-452a-aff2-cc1298679ac9.html\n",
+      " Mar. http://english.customs.gov.cn/Statics/e1eae4c1-9033-4cff-830b-6085f4f6cf80.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(monthly_total_links)):\n",
+    "    print(monthly_total_links[i].text, monthly_total_links[i]['href'])\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "871c0432-4922-47be-8a96-8864fa61d579",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find the list of years offered\n",
+    "select_years = fullb_soup.find('select', id='monthlysel')\n",
+    "# create and empty list\n",
+    "# append the values in our stripped strings to the list \n",
+    "list_years = []\n",
+    "for value in select_years.stripped_strings:\n",
+    "    list_years.append(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "986fc992-ae6f-435b-8e53-ce639dd170ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['2022', '2021', '2020', '2019', '2018']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_years"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4a677b22-ee9a-4de3-8e46-d032e0ab0e2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setup base url for gacc web page\n",
+    "prelim_url = 'http://english.customs.gov.cn/statics/report/preliminary.html'\n",
+    "# make a get request\n",
+    "prelim_html_doc = requests.get(prelim_url)\n",
+    "# parse the html with breautiful soup\n",
+    "prelim_soup = BeautifulSoup(prelim_html_doc.content, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "41fb009d-39dc-4678-b34b-976350a1b4c5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# print out the prettified soup\n",
+    "print(prelim_soup.prettify)"
+   ]
   },
   {
    "cell_type": "code",
@@ -45,28 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "185e8c1b-9e86-42dd-b7ba-db8e850bfb3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<td>(1) China's Total Export &amp; Import Values (in CNY)</td>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prelim_soup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "75500ee6-b38b-4f08-a878-25332b0145db",
    "metadata": {},
    "outputs": [
